# bdk-bitcoind-client

./: .gitignore  Cargo.toml  LICENSE.md  README.md  justfile
.github/: pull_request_template.md
.github/workflows/: audit.yml  commit_signatures.yml  cont_integration.yml  sigs.yml  zizmor.yml
contrib/: check-signatures.sh
src/: client.rs  error.rs  lib.rs
src/client/: v28.rs  v29.rs
tests/: rpc_client.rs  test_rpc_client.rs  testenv.rs
